# trading-bot

./: .env  .env.example  .gitignore  .gitignore_backup  .pre-commit-config.yaml  .secrets.baseline  Changed Files.txt  Current System Overview (Pre-Restar.txt  LICENSE.txt  Makefile  README.md  Template For New Conversation.txt  Usage and Project Structure.txt  best_model.h5  best_params.json  config.json  evaluate_model.py  evaluate_model2.py  evaluation_results.json  feature_names.pkl  final_model_trainer.py  final_model_trainer2.py  final_scaler.pkl  final_target_scaler.pkl  github.txt  hyperparameter_tuner.py  hyperparameter_tuner2.py  main.py  normalize_feature_names.py  pyproject.toml  replace-rules.txt  replacements.txt  requirements.txt  run.bat  setup.py  test.py  test_imports.py  trading bot command prompts.txt  transformer6.py  transformer_final_trainer.py  (+1 more)
checkpoints/: best_sharpe_0.00
config/: config.yaml  retune_search_parameters.py  search_space.py
data_preprocessing/: add_technical_indicators.py  combine_data.py  fetch_data.py  handle_missing_data.py  load_and_preprocess.py  load_and_preprocess2.py  prepare_data.py
docs/: metrics_reference.md
hyperparameter_tuning/: raytune_filter.py
logs/: evaluations.npz
model_artifacts/: feature_scaler.pkl  scalers.pkl  target_scaler.pkl  trained_model.h5
model_training/: build_model.py  save_model.py  train_final_model  train_final_model.py
models/: __init__.py.py  transformer_trainer.py  transformer_trainer2.py
monitoring/: docker-compose.yml  prometheus.yml
notepad things/: 2 week plan.txt  (+4 more)
(+41861 files in other folders)
